[package]
name = "best_skn_message"
description = "A Simple Message Library For Rust"
version = "1.2.1"
edition = "2021"
rust-version = "1.78.0"
readme = "README.md"
license = "MIT"
keywords = ["message", "library"]
categories = ["command-line-interface"]
include = ["/src", "LICENSE"]
authors = ["SKN Shukhan"]
repository = "https://github.com/skn437/skn-rust-message"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
console = "0.15.8"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
